--- a/templates/apology.html
+++ b/templates/apology.html
@@ -6,6 +6,7 @@
 
 {% block main %}
     <div class="container">
-        {{ message }}
+        <h6>ERROR 404</h6>
+        <p>Please try refreshing the page or email jeffrey.ma.jzm5@yale.edu to report a problem</p>
     </div>
 {% endblock %}
