--- a/templates/browse.html
+++ b/templates/browse.html
@@ -12,7 +12,7 @@
         <li class="p-3" style="">
             <div>
                 <div>
-                    <a class="disabledButton" href="{{links[i]}}" style="color: #4fa3ff; font-size: 1.7em; font-weight: 200;">{{ summaries[i]["article"] }}</a>
+                    <a class="disabledButton" href="{{links[i]}}" style="color: #017bff; font-size: 1.7em; font-weight: 200;">{{ summaries[i]["article"] }}</a>
                 </div>
                 <div class="pl-1" style="font-size: 0.8em">
                     Dcyphr-d by <a class="disabledButton" href="public/{{ summaries[i]['id'] }}" style="color: #ff2f2b">@{{ summaries[i]["username"] }}</a>
