--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,36 +6,85 @@
 
 {% block main %}
 
+<div class="container">
+    <div class="container mb-2">
+        <div class="row jumbotron m-xs-1 rounded bg-white text-left">
 
-<div class="container mb-5">
-    <div class="row jumbotron m-xs-1 rounded bg-white text-left">
-
-        <div class="col-md-10 col-xs-6">
-            <p class="display-4">
-                {{ article[0]["article"] }}
-            </p>
+            <div class="col-md-10 col-xs-6">
+                <p class="display-4" style="color: DodgerBlue">
+                    {{ article[0]["article"] }}
+                </p>
 
 
-            <p style="font-size: medium;">
-                Link to Original Article: <a href="{{ link }}">{{ article[0]["article"] }}</a>
-            </p>
+                <p style="font-size: medium;">
+                    Link to Original Article: <a href="{{ link }}">{{ article[0]["article"] }}</a>
+                </p>
+            </div>
+
+
         </div>
+    </div>
 
 
+    <div class="mx-4 text-left" style="margin-left: 15%">
+
+        <div class="row">
+
+            <div class="col">
+
+                <div class="mb-2 ml-auto text-center w-25">
+                    <button class="btn btn-default bg-white" data-toggle="collapse" data-target="#guidelines" style="color: DodgerBlue;">
+                        <span class="d-none d-lg-flex">Toggle Guildlines</span>
+                        <span class="d-flex d-lg-none">Below</span>
+                    </button>
+                </div>
+
+                <form method="POST" >
+                    <textarea id="summernote" name="summary" id="summary">{{summary | safe}}</textarea>
+                    <div class="container text-center">
+                        <button class="btn btn-default my-3" type="submit" style="color: white; background-color: DodgerBlue">Submit</button>
+                    </div>
+                </form>
+            </div>
+
+            <div class="col-12 col-lg-4 collapse show" id="guidelines">
+                <h2 style="color: DodgerBlue">Guidelines</h2>
+                <ol class="p-2" style="font-size: 0.9em;">
+                    <li class="mb-3">
+                        <p class="mb-1">Minimize normalization.</p>
+                    </li>
+                    <li class="mb-3">
+                        <p class="mb-1">Keep subjects near verbs near objects.</p>
+                    </li>
+                    <li class="mb-3">
+                        <p class="mb-1">Use simple word substitutions. (Under 3 Syllables)</p>
+                    </li>
+                    <li class="mb-3">
+                        <p class="mb-1">Restrict sentences to one idea per sentence.</p>
+                    </li>
+                    <li class="mb-3">
+                        <p class="mb-1">Make dependent clauses that appear in a middle of a sentence a separate sentence.</p>
+                        <p class="mb-1 pl-2"><strong>Example:</strong> The ball, which was blue, rolled down the hill.</p>
+                        <p class="mb-1 pl-2"><em>Better:</em> The ball was blue. It rolled down the hill.</p>
+                        <p class="mb-1 pl-2"><em>Best:</em> The blue ball rolled down the hill.</p>
+                    </li>
+                    <li class="mb-3">
+                        <p class="mb-1">Qualify all the pronouns you use.</p>
+                    </li>
+                    <li  class="mb-3">
+                        <p class="mb-1">Introduce paragraphs with main idea sentence.</p>
+                    </li>
+                    <li  class="mb-3">
+                        <p class="mb-1">State only the ideas of the original text.</p>
+                    </li>
+                </ul>
+
+
+            </div>
+
+        </div>
     </div>
 </div>
-
-
-
-    <div class="container text-left">
-
-        <form method="POST" >
-            <textarea id="summernote" name="summary" id="summary">{{summary | safe}}</textarea>
-            <button class="btn btn-default" type="submit">Submit</button>
-        </form>
-
-    </div>
-
 
 {% endblock %}
 
