--- a/templates/read.html
+++ b/templates/read.html
@@ -10,8 +10,8 @@
 <div class="container mb-5">
     <div class="row jumbotron m-xs-1 rounded bg-white text-left">
 
-        <div class="col-md-10 col-xs-6">
-            <p class="display-4">
+        <div class="col-md-9 col-xs-6">
+            <p class="" style="font-size: 2.5em; color: #017bff">
                 {{ article }}
             </p>
 
@@ -20,50 +20,54 @@
             </p>
 
             <p style="font-size: medium;">
-                Dcyphr-d by <font color="DodgerBlue"><a href="/public/{{ summary[0]['user_id'] }}">@{{ username[0]["username"] }}</a></font>
+                Dcyphr-d by <font style="color: #017bff"><a href="/public/{{ summary[0]['user_id'] }}">@{{ username[0]["username"] }}</a></font>
             </p>
 
             <p style="font-size: medium;">
-                Link to Original Article: <font color="DodgerBlue"><a href="{{ link }}">{{ article }}</a></font>
+                Link to Original Article: <font style="color: #017bff"><a href="{{ link }}">{{ article }}</a></font>
             </p>
 
             <p>
-                Link to Edit: <font color="DodgerBlue"><a href="/edit/{{ doi }}">Edit</a></font>
-            </p>
-            <p>
-                <form method="POST">
-                    <button class="btn btn-default" name="flag" value="flag">FLAG</button>
-                </form>
+                Link to Edit: <font style="color: #017bff"><a href="/edit/{{ doi }}">Edit</a></font>
             </p>
         </div>
 
 
-        <div class="col-md-2 col-xs-6 text-center text-secondary" style="font-size: 1.7em">
+        <div class="col-md-3 col-xs-6 text-center text-secondary" style="font-size: 1.9em; padding-top: 10px">
             <form method="POST">
                 {% if x == "true" %}
-            <button class="btn btn-default" type="submit" name="like" value="like" disabled><i class="arrow up"></i></button>
-            <br>
-            {{ likes }}
-            <br>
-            <button class="btn btn-default" type="submit" name="dislike" value="dislike" disabled><i class="arrow down"></i></button>
-            {% else %}
-            <button class="btn btn-default" type="submit" name="like" value="like"><i class="arrow up"></i></button>
-            <br>
-            {{ likes }}
-            <br>
-            <button class="btn btn-default" type="submit" name="dislike" value="dislike"><i class="arrow down"></i></button>
-            {% endif %}
+                <div><button class="btn btn-default bg-white pb-3" type="submit" name="like" value="like" disabled>
+                    <i class="fa fa-chevron-up border-0 fa-lg" style="color: #017bff;"></i></button></div>
+                <span style="">{{ likes }}</span>
+                <div><button class="btn btn-default bg-white pt-3" type="submit" name="dislike" value="dislike" disabled>
+                    <i class="fa fa-chevron-down border-0 fa-lg" style="color: #017bff;"></i></button></div>
+                {% else %}
+                <div><button class="btn btn-default bg-white" type="submit" name="like" value="like">
+                    <i class="fa fa-chevron-up border-0 fa-lg" style="color: #017bff;"></i></button></div>
+                <span style="">{{ likes }}</span>
+                <div><button class="btn btn-default bg-white" type="submit" name="dislike" value="dislike">
+                    <i class="fa fa-chevron-down border-0 fa-lg" style="color: #017bff;"></i></button></div>
+                {% endif %}
             </form>
+
+            <div class="my-3">
+                <form method="POST">
+                    <button class="btn btn-default bg-white" name="flag" value="flag">
+                        <i class="fa fa-flag fa-2x border-0" style="color: #eb9534;"></i>
+                        <div class="my-1" style="color: #3b3b39">Flag For Moderation</div>
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
 
 
 
     <div class="w-25 p-2 bg-light border border-dark ">
-        <h1 class="display-4">Contents</h1>
+        <h1 class="" style="color: #017bff; text-weight: 500; font-size: 2.5em">Contents</h1>
         <ul class="ml-3 text-left" style="list-style: none;">
             {% for i in range(title_length) %}
-            <li><a href="#{{ titles[i] }}">{{ titles[i] }}</a></li>
+            <li><a class="contentButton" href="#{{ titles[i] }}">{{ i + 1 }}.{{ titles[i] }}</a></li>
             {% endfor %}
         </ul>
     </div>
