--- a/templates/index.html
+++ b/templates/index.html
@@ -85,18 +85,18 @@
         <section class="w3-row-padding w3-center" >
             <h2 class="display-4 mb-5 text-primary">team</h2>
             <article class="w3-third">
-                <p>Jeffrey Ma</p>
-                <p>Founder</p>
+                <p><b style="color: black">Jeffrey Ma</p></b>
+                <p><b style="color: #017bff">Founder</p></b>
                 <p>jeffrey.ma.jzm5@yale.edu</p>
             </article>
             <article class="w3-third">
-                <p>Onyedikachi Uche</p>
-                <p>Research Director</p>
+                <b style="color: black"><p>Onyedikachi Uche</p></b>
+                <b style="color: #017bff"><p>Research Director</p></b>
                 <p>onyedikachi.uche@yale.edu</p>
             </article>
             <article class="w3-third">
-                <p>Aidan Neziri</p>
-                <p>Business Director</p>
+                <p><b>Aidan Neziri</p></b>
+                <b style="color: #017bff"><p>Business Director</p></b>
                 <p>aidan.neziri@yale.edu</p>
             </article>
         </section>
@@ -104,19 +104,19 @@
         <br><br>
         <section class="w3-row-padding w3-center">
             <article class="w3-quarter">
-                <p>Ivan Chan</p>
+                <b><p>Ivan Chan</p></b>
                 <p>ivan.chan@yale.edu</p>
             </article>
             <article class="w3-quarter">
-                <p>Janet Hsu</p>
+                <b><p>Janet Hsu</p></b>
                 <p>janet.hsu@yale.edu</p>
             </article>
             <article class="w3-quarter">
-                <p>Jalil Morris</p>
+                <b><p>Jalil Morris</p></b>
                 <p>jalil.morris@yale.edu</p>
             </article>
             <article class="w3-quarter">
-                <p>Graham Stodolski</p>
+                <b><p>Graham Stodolski</p></b>
                 <p>graham.stodolski@yale.edu</p>
             </article>
         </section><br><br>
