--- a/templates/register.html
+++ b/templates/register.html
@@ -6,11 +6,14 @@ Register
 
 
 {% block main %}
+<br>
+<br>
+<p><b style="color: DodgerBlue">Sign up to join the movement to decentralize scientific knowledge!</b></p>
 <form action="/register" method="POST">
     <br>
     <input type="text" class="form-control" name="username" placeholder="username">
     <p></p>
-    <p>Please enter Yale email only.</p>
+    <p style="color: DodgerBlue">Please enter Yale email only.</p>
     <input type="text" class="form-control" name="email" placeholder="email">
     <p></p>
     <input type="text" class="form-control" name="password" placeholder="password">
