--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block main %}
+<div style="padding: 80px">
+    <b style="color: DodgerBlue">Welcome back dcyphr-r!</b>
+    <br>
 <br>
     <form action="/login" method="post">
         <div class="form-group">
@@ -15,4 +18,5 @@
         </div>
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
+</div>
 {% endblock %}
