fixed password visibility

--- a/templates/register.html
+++ b/templates/register.html
@@ -16,9 +16,9 @@ Register
     <p style="color: DodgerBlue">Please enter Yale email only.</p>
     <input type="text" class="form-control" name="email" placeholder="email">
     <p></p>
-    <input type="text" class="form-control" name="password" placeholder="password">
+    <input type="password" class="form-control" name="password" placeholder="password">
     <p></p>
-    <input type="text" class="form-control" name="confirm" placeholder="confirm password">
+    <input type="password" class="form-control" name="confirm" placeholder="confirm password">
     <p></p>
     <input type="submit" class="btn btn-primary">
 </form>
