--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@ Register
     <br>
     <input type="text" class="form-control" name="username" placeholder="username">
     <p></p>
-    <p style="color: DodgerBlue">Please enter Yale email only.</p>
+    <!--<p style="color: DodgerBlue">Please enter Yale email only.</p>-->
     <input type="text" class="form-control" name="email" placeholder="email">
     <p></p>
     <input type="password" class="form-control" name="password" placeholder="password">
