created approval system

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -69,7 +69,10 @@
 
             {% if admin == 1 %}
             <div class="col-6">
-                <a href="/compare" class="btn btn-primary"> Compare Tasks </a>
+                <a href="/compare" class="btn btn-primary"> Compare Edits </a>
+            </div>
+            <div class="col-3">
+                <a href="/approvals" class="btn btn-primary"> Approvals </a>
             </div>
             {% endif %}
 
