--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,6 +45,7 @@
                         <li class="nav-item"><a class="nav-link" href="/request">Request</a></li>
                         <li class="nav-tem"><a class="nav-link" href="/method/0">Methods</a></li>
                         <li class="nav-item"><a class="nav-link" href="/tasks">Contribute</a></li>
+                        <li class="nav-tem"><a class="nav-link" href="/contact">Contact Us</a></li>
                         <form action="/" method="POST">
                             <div class="nav-item ml-md-3 mb-md-1 input-group">
                             <input type="text" class="form-control border border-dark" name="search" placeholder="Search...">
@@ -60,6 +61,8 @@
                         <li class="nav-item"><a class="nav-link" href="/browse">Browse</a></li>
                         <li class="nav-item"><a class="nav-link" href="/request">Request</a></li>
                         <li class="nav-tem"><a class="nav-link" href="/method/0">Methods</a></li>
+                        <li class="nav-tem"><a class="nav-link" href="/tasks">Contribute</a></li>
+                        <li class="nav-tem"><a class="nav-link" href="/contact">Contact Us</a></li>
 
                         <form action="/" method="POST">
                         <div class="nav-item ml-3 mb-1 input-group">
