UI fixes for consistency

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -6,10 +6,10 @@
 
 {% block main %}
 <div class="container mt-5">
-    <div class="text-left pl-3" style="font-size: 1.8em">
+    <div class="text-left pl-3" style="font-size: 1.8em; ">
         <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
         <div class="d-inline ml-2" style="color: #017bff">Browse</div>
-        <p class="ml-4 mt-2" style="font-size: 0.6em">Take a look to see if the paper you are reading is here. If not, submit a request in the "Request" tab! </p>
+        <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">Take a look to see if the paper you are reading is here. If not, submit a request in the "Request" tab! </p>
     </div>
 
     <div>
@@ -17,7 +17,7 @@
             {{ p }}
             {% for i in range(length) %}
             <li class="p-3" style="">
-                <div class="row border-top border-dark pt-3">
+                <div class="row border-bottom border-dark pt-3">
                     <div class="col-1 text-center" style="color: grey; font-size: 1.25em; width: 6%; margin: auto 0">
 
                         {{ summaries[i]['likes'] }}
