--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
         <section class="mb-5 h-auto">
 
 
-        <br>
-        <br><br><br>
+        <br><br>
+
         <h1 class="display-3"><font color="#017bff">dcyphr</font></h1><br>
         <blockquote>
             <p>“Any fool can make things bigger, more complex, and more violent. It takes a touch of genius — and a lot of courage — to move in the opposite direction.”</p>
@@ -23,8 +23,11 @@
                 <button class="btn btn-outline-secondary" type="submit">Search</button>
             </div>
         </div>
-        </form></section>
+        </form>
         <br>
+        <p><b>New to dcyphr?</b> Learn how to use the site <font color="#017bff"><a href="/about">here</a></font> or register <font color="#017bff"><a href="/register">here</a></font>.</p>
+        </section>
+
         <div class="container h-50 mt-4 pt-4;">
             <div class= "row h-100">
                 <div class="col-12 col-md-3 p-2 border" style="height: 250px">
