--- a/templates/methods.html
+++ b/templates/methods.html
@@ -7,9 +7,14 @@ Methods
 {% block main %}
 
 
-<div class="container">
-<br>
-<h1 style="text-align: left">Methods:</h1>
+
+<div class="container mt-5">
+    <div class="text-left pl-3" style="font-size: 1.8em;">
+        <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
+        <div class="d-inline ml-2" style="color: #017bff">Methods</div>
+        <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">A collection of methods we have defined to make your experience better!</p>
+    </div>
+
 <dl style="text-align: left">
     {% for i in range(length) %}
     <ul style="list-style: none">
