--- a/templates/read.html
+++ b/templates/read.html
@@ -28,7 +28,9 @@
             </p>
 
             <p>
-                Link to Edit: <font style="color: #017bff"><a href="/edit/{{ doi }}">Edit</a></font>
+                <b>See something wrong that you can fix?</b><br>
+
+                <font style="color: #017bff"><a href="/edit/{{ doi }}"><i class="fa fa-edit fa-2x border-0"></i><br>Edit</a></font>
             </p>
         </div>
 
