--- a/templates/request.html
+++ b/templates/request.html
@@ -5,6 +5,13 @@
 {% endblock %}
 
 {% block main %}
+
+<div class="container mt-5">
+    <div class="text-left pl-3" style="font-size: 1.8em; ">
+        <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
+        <div class="d-inline ml-2" style="color: #017bff">Request</div>
+        <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">Fill out the form to request a summary to be made!</p>
+    </div>
 <br>
 <form action="/request" method="POST" class="form-group">
     <input type="text" class="form-control" placeholder="Article name" name="article" required>
@@ -17,4 +24,5 @@
     <p></p>
     <button class="btn btn-primary" type="submit">Submit</button>
 </form>
+</div>
 {% endblock %}
