--- a/templates/apology.html
+++ b/templates/apology.html
@@ -7,6 +7,6 @@
 {% block main %}
     <div class="container">
         <h6>ERROR 404</h6>
-        <p>Please try refreshing the page or email jeffrey.ma.jzm5@yale.edu to report a problem</p>
+        <p>Please try refreshing the page or email dcyphrteam@gmail.com to report a problem</p>
     </div>
 {% endblock %}
