--- a/templates/edit.html
+++ b/templates/edit.html
@@ -11,13 +11,13 @@
         <div class="row jumbotron m-xs-1 rounded bg-white text-left">
 
             <div class="col-md-10 col-xs-6">
-                <p class="display-4" style="color: DodgerBlue">
+                <p class="display-4" style="color: #017bff; font-size:2.5em">
                     {{ article[0]["article"] }}
                 </p>
 
 
                 <p style="font-size: medium;">
-                    Link to Original Article: <a href="{{ link }}">{{ article[0]["article"] }}</a>
+                    Link to Original Article: <font color="#017bff"><a href="{{ link }}">{{ article[0]["article"] }}</a></font>
                 </p>
             </div>
 
@@ -34,7 +34,7 @@
 
                 <div class="mb-2 ml-auto text-center w-25">
                     <button class="btn btn-default bg-white" data-toggle="collapse" data-target="#guidelines" style="color: DodgerBlue;">
-                        <span class="d-none d-lg-flex">Toggle Guildlines</span>
+                        <span class="d-none d-lg-flex">Toggle Guidelines</span>
                         <span class="d-flex d-lg-none">Below</span>
                     </button>
                 </div>
