--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -4,12 +4,14 @@
     Tasks
 {% endblock %}
 {% block main %}
-<div class="container mt-3">
-    <div class="text-left pl-3" style="font-size: 1.6em">
+
+<div class="container mt-5">
+    <div class="text-left pl-3" style="font-size: 1.8em;">
         <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
         <div class="d-inline ml-2" style="color: #017bff">Contribute</div>
-        <p class="ml-4 mt-2" style="font-size: 0.6em">These are the articles that have been requested. Select one to start contributing! </p>
+        <p class="ml-4 mt-2" style="font-size: 0.6em;  border-bottom: 1px solid black; padding: 10px">These are the articles that have been requested. Select one to start contributing! </p>
     </div>
+    <br>
     <div class="px-4">
         <table class="table table-striped contributeTable">
             <thead>
