fixed compare and approvals

--- a/templates/approvals.html
+++ b/templates/approvals.html
@@ -6,7 +6,8 @@
 {% block main %}
 
 {% if length == 0 %}
-No summaries to approve!
+<br>
+<b>No summaries to approve!</b>
 {% endif %}
 
 {% for i in range(length) %}
