--- a/templates/edit.html
+++ b/templates/edit.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <form method="POST" >
-                    <textarea id="summernote" name="summary" id="summary">{{summary | safe}}</textarea>
+                    <textarea id="summernote" name="summary" id="summary">{{summary}}</textarea>
                     <div class="container text-center">
                         <button class="btn btn-default my-3" type="submit" style="color: white; background-color: DodgerBlue">Submit</button>
                     </div>
