fixed sql and reply button

--- a/templates/read.html
+++ b/templates/read.html
@@ -135,7 +135,7 @@
 </div>
 
                     <form method="POST" class="collapse" id="reply{{ comment['comment_id'] }}{{ comment['reply'] }}">
-                        <div>
+                        <div class="sticky-top form-group row">
                             <div class="col">
                                 <input type="text" name="reply" class="form-control text-wrap w-100" id="reply" placeholder="Reply here...">
                             </div>
@@ -201,7 +201,7 @@
 
 
                     <form method="POST" class="form collapse hide" id="reply{{ comment['comment_id'] }}{{ comment['reply'] }}">
-                        <div>
+                        <div class="sticky-top form-group row">
 
                             <div class="col">
                                 <input type="text" name="reply" class="form-control text-wrap w-100" id="reply" placeholder="Reply here...">
